--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
-theme: jekyll-theme-minimal
+title: "Mohit - Cyber Security Analyst"
+description: "Cyber Security Enthusiast | Cloud Security | Penetration Testing"
+author: "Mohit"
+github_username: "Mohit02-cse"
